statum-macros/tests/ui/invalid_transition_include_ambiguous_machine_name.stderr
error: Error: include-generated `#[transition]` impl for `FlowMachine` could not resolve a unique `#[machine]` item in module `ambiguous_transition_include`.
       Fix: keep the machine name unique within the current crate for include-generated transition fragments, or move the transition impl next to its machine definition.
       Loaded `#[machine]` candidates: `FlowMachine` in `invalid_transition_include_ambiguous_machine_name::beta` ($DIR/tests/ui/invalid_transition_include_ambiguous_machine_name.rs:23), `FlowMachine` in `invalid_transition_include_ambiguous_machine_name::alpha` ($DIR/tests/ui/invalid_transition_include_ambiguous_machine_name.rs:36).
 --> tests/ui/support/ambiguous_transition_include.rs
  |
  | impl FlowMachine<Start> {
  |      ^^^^^^^^^^^
